# mongo-pid-removal

./: LICENSE  README.md  mongo-pid-removal.cabal  mongoConfig.yml  mongoConfig.yml~
src/: Main.hs  RemovalMain.hs  RemovalMain.hs~
src/Mongo/Pid/: Removal.hs  Removal_flymake.hs
src/Mongo/Pid/Removal/: Internal.hs
test/Mongo/Pid/: RemovalSpec.hs
